--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <body bgcolor="black">
-	<IMG src="x.jpg"><br><br><br></br>
-		<a href="index.html"><IMG src="a.jpg"></a>
+	<IMG src="X.jpg"><br><br><br></br>
+		<a href="index.html"><IMG src="A.jpg"></a>
